--- a/Core/Core/templates/index.html
+++ b/Core/Core/templates/index.html
@@ -1,1 +1,12 @@
-<h1>ESTE ES EL INDEX</h1>
+{% load static %}
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="icon" type="image/png" href="{% static 'resources/img/favicon.png' %}">
+</head>
+<body>
+<h1>ESTO ES EL INDEX</h1>
+</body>
+</html>
