--- a/Core/Core/templates/Navbar.html
+++ b/Core/Core/templates/Navbar.html
@@ -10,7 +10,7 @@
         <li><a href="{% url 'Servicios' %}">Servicios</a></li><!--DINAMICO-->
         <li><a href="{% url 'Productos' %}">Productos</a></li><!--DINAMICO-->
         <li><a href="{% url 'SobreNosotros' %}">Contactenos</a></li>
-        <li><a href="{% url 'Ingreso' %}">Ingreso</a></li>
+        <li><a href="{% url 'Registro' %}">Ingreso</a></li>
       </ul>
     </div>
   </nav>
