--- a/Core/Core/templates/Registro.html
+++ b/Core/Core/templates/Registro.html
@@ -12,8 +12,7 @@
 <body>
 
 {% include 'Navbar.html' %}
-
-<section id="Inicio" class="sectionInicio">ACA EL LOGIN</section>
+{% include 'RegistroForm.html' %}
 
 </body>
 </html>
