--- a/Core/Core/templates/LoginForm.html
+++ b/Core/Core/templates/LoginForm.html
@@ -2,14 +2,13 @@
     <h1>Login</h1>
     <div class="textbox">
       <i class="fas fa-user"></i>
-      <input type="text" placeholder="Username" autofocus="autofocus">
+      <input type="text" placeholder="Usuario" autofocus="autofocus">
     </div>
   
     <div class="textbox">
       <i class="fas fa-lock"></i>
-      <input type="password" placeholder="Password">
+      <input type="password" placeholder="Contraseña">
     </div>
   
-    <input type="button" class="btn" value="Sign in">
-    <a href="{% url 'Registro' %}">¿No tienes cuenta? Regístrate</a>
+    <input type="button" class="btn" value="Ingresar">
 </div>
