--- a/Core/Core/static/resources/css/styles.css
+++ b/Core/Core/static/resources/css/styles.css
@@ -3,6 +3,8 @@
     height: 50%;
 }
 
+/*NAVBAR*/
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
   margin: 0;
@@ -36,7 +38,7 @@ nav {
   }
   
   nav .navbar .logo a {
-    color: #fff;
+    color: #000000;
     font-size: 27px;
     font-weight: 600;
     text-decoration: none;
@@ -53,7 +55,7 @@ nav {
   }
   
   .navbar .menu li a {
-    color: #fff;
+    color: #000000;
     font-size: 17px;
     font-weight: 500;
     text-decoration: none;
@@ -63,6 +65,7 @@ nav {
   
   .navbar .menu li a:hover {
     background-color: #555;
+    border-radius: 200px;
   }
   
   .logo img {
@@ -70,7 +73,7 @@ nav {
     margin-right: 20px;
   }
   
-
+/*---------------------------------------------*/
 
 
 
@@ -121,7 +124,7 @@ nav {
   padding: 0;
   font-family: sans-serif;
   width: 100%;
-  height: 100vh; /* Ajusta la altura según tus necesidades */
+  height: 100vh;
   overflow: hidden;
   position: relative;
 }
@@ -159,7 +162,7 @@ nav {
   border: none;
   outline: none;
   background: none;
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 18px;
   width: 80%;
   float: left;
