--- a/Core/Core/templates/Navbar.html
+++ b/Core/Core/templates/Navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav>
+<nav style="border-bottom: 4px solid white;">
     <div class="navbar">
       <div class="logo">
         <img src="{% static 'resources/img/favicon.png' %}" alt="Favicon">
@@ -9,7 +9,7 @@
         <li><a href="{% url 'Inicio' %}">Inicio</a></li>
         <li><a href="{% url 'Servicios' %}">Servicios</a></li><!--DINAMICO-->
         <li><a href="{% url 'Productos' %}">Productos</a></li><!--DINAMICO-->
-        <li><a href="{% url 'SobreNosotros' %}">Contactenos</a></li>
+        <li><a href="{% url 'SobreNosotros' %}">Sobre Nostros</a></li>
         <li><a href="{% url 'Login' %}">Ingreso</a></li>
       </ul>
     </div>
