--- a/Core/Core/static/resources/css/styles.css
+++ b/Core/Core/static/resources/css/styles.css
@@ -121,6 +121,85 @@ nav {
 
 /*---------------------------------------------*/
 
+
+/*FOOTER*/
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+.footer {
+  background-color: #3d3d3d;
+  color: #fff;
+  padding: 20px 0;
+  border-top: 8px solid white;
+}
+
+.footer-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer-section {
+  flex-basis: 30%;
+  margin-bottom: 10px;
+}
+
+.footer-section.about h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.contact span {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.socials a {
+  display: inline-block;
+  margin-right: 10px;
+  color: #fff;
+  font-size: 18px;
+}
+
+.socials a:hover {
+  color: #bbb;
+}
+
+.links h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.links ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.links ul li {
+  margin-bottom: 5px;
+}
+
+.links ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.links ul li a:hover {
+  text-decoration: underline;
+}
+
+.footer-bottom {
+  margin-top: 20px;
+  text-align: center;
+  color: #bbb;
+}
+
+/*---------------------------------------------*/
+
 /*INDEX TARJETAS*/
 
 header.banner {
@@ -195,8 +274,85 @@ section.services {
 
 /*---------------------------------------------*/
 
-/*INDEX BANNER*/
+/*BANNER*/
+ /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
+ body{
+	font-family: 'Helvetica', sans-serif;
+	padding: 0;
+	margin: 0;
+    background-image: linear-gradient(to top, #1a5276, #2980b9, #3498db, #5eaefc, #86c5fc, #b3dfff, #d6e9ff);
+    
+}
+.contenedor{
+	display: flex;
+	max-width: 100%;
+	height: 80vh;
+	background-image: url(../img/banner.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: left;
+    border-bottom: 8px solid rgb(255, 255, 255);
+}
+.contenedor .wrap{
+	max-width: 1000px;
+	margin: 0 auto;
+	height: 100%;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: left;
+}
+.contenedor .wrap .box {
+    flex-basis: 50%;
+    color: #ffffff;
+    text-align: left;
+    align-self: center;
+    margin-right: 20px;
+}
+.contenedor .wrap .box span{
+	font-size: 18px;
+	letter-spacing: 2px;
+	font-weight: 300;
+	
+}
+.contenedor .wrap .box h1{
+	font-size: 30px;
+	line-height: .9;
+	padding-bottom: 10px;
+	
+}
+.contenedor .wrap .box p{
+	font-size: 16px;
+	line-height: 1.2;
+}
+.contenedor .wrap .box .botones {
+    display: flex;
+    margin-top: 30px;
+    flex-flow: row wrap;
+    justify-content: left;
+}
+
+.contenedor .wrap .box .botones .btn1{
+	flex-basis: 30%;
+	border: solid 2px;
+	border-radius: 20px;
+	padding: 10px 30px 10px 30px;
+	margin-right: 20px;
+	text-align: center;
+	text-decoration: none;
+	color: #ffffff;
+}
+.contenedor .wrap .box .botones .btn2{
+	flex-basis: 30%;
+	background-color: #2f4eff;	
+	border: solid 2px;
+	border-radius: 20px;
+	padding: 10px 30px 10px 30px;
+	text-align: center;
+	text-decoration: none;
+	color: #fdfdfd;
+    border-color: #ffffff;
+}
 /*---------------------------------------------*/
 
 /*FORMULARIO LOGIN*/
