--- a/Core/Core/static/resources/css/styles.css
+++ b/Core/Core/static/resources/css/styles.css
@@ -427,6 +427,4 @@ section.services {
 
 /*SOBRE NOSOTROS*/
 
-.contenedor {
-  margin-top: 100px;
-}
+/*---------------------------------------------*/
