--- a/Core/Core/static/resources/css/styles.css
+++ b/Core/Core/static/resources/css/styles.css
@@ -427,6 +427,7 @@ section.services {
 
 /*SOBRE NOSOTROS*/
 
-.contenedor {
-  margin-top: 100px;
+.services{
+  background-image: url(resources/img/sobrenosotros_mec.png);
+  margin-top: 35px;
 }
