--- a/Core/Core/static/resources/css/styles.css
+++ b/Core/Core/static/resources/css/styles.css
@@ -427,6 +427,8 @@ section.services {
 
 /*SOBRE NOSOTROS*/
 
-.contenedor {
+.services {
   margin-top: 100px;
 }
+
+/*---------------------------------------------*/
