--- a/Core/Core/templates/Login.html
+++ b/Core/Core/templates/Login.html
@@ -11,14 +11,13 @@
 </head>
 <body>
 
-{% include '../Navbar.html' %}
+{% include 'Navbar.html' %}
 
 {% include 'loader.html' %}
 
 {% include 'LoginForm.html' %}
 
-{% comment %} {% include 'footer.html' %} {% endcomment %}
-
+{% include 'footer.html' %}
 
 </body>
 </html>
