--- a/Core/Core/templates/LoginForm.html
+++ b/Core/Core/templates/LoginForm.html
@@ -1,14 +1,19 @@
-<h1>Iniciar Sesión</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Iniciar Sesión</button>
-</form>
-
-{% if messages %}
-    <ul>
-        {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
+<div class="unique-container">
+    <h2>Login</h2>
+    <form method="post">
+        {% csrf_token %}
+        <div class="unique-form-group">
+            <label for="documento">Documento:</label>
+            <input type="text" id="documento" name="documento" required>
+        </div>
+        <button type="submit" class="unique-button">Entrar</button>
+    </form>
+    {% if messages %}
+    <br>
+        <ul class="unique-messages">
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+</div>
