--- a/Core/Core/templates/Navbar.html
+++ b/Core/Core/templates/Navbar.html
@@ -1,17 +1,22 @@
 {% load static %}
 <nav style="border-bottom: 4px solid white;">
     <div class="navbar">
-      <div class="logo">
-        <img src="{% static 'resources/img/favicon.png' %}" alt="Favicon">
-        <a href="{% url 'Inicio' %}">CarCareTech</a>
-      </div>
-      <ul class="menu">
-        <li><a href="{% url 'Inicio' %}">Inicio</a></li>
-        <li><a href="{% url 'Servicios' %}">Servicios</a></li><!--DINAMICO-->
-        <li><a href="{% url 'Productos' %}">Productos</a></li><!--DINAMICO-->
-        <li><a href="{% url 'SobreNosotros' %}">Sobre Nostros</a></li>
-        <li><a href="{% url 'Login' %}">Ingreso</a></li>
-      </ul>
+        <div class="logo">
+            <img src="{% static 'resources/img/favicon.png' %}" alt="Favicon">
+            <a href="{% url 'Inicio' %}">CarCareTech</a>
+        </div>
+        <ul class="menu">
+            <li><a href="{% url 'Inicio' %}">Inicio</a></li>
+            <li><a href="{% url 'Servicios' %}">Servicios</a></li><!-- DINÁMICO -->
+            <li><a href="{% url 'Productos' %}">Productos</a></li><!-- DINÁMICO -->
+            <li><a href="{% url 'SobreNosotros' %}">Sobre Nosotros</a></li>
+            {% if usuario %}
+                {% if usuario.Rol == 1 %}
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% endif %}
+            {% else %}
+                <li><a href="{% url 'Login' %}">Ingreso</a></li>
+            {% endif %}
+        </ul>
     </div>
-  </nav>
-  
+</nav>
