--- a/Core/Core/templates/productos.html
+++ b/Core/Core/templates/productos.html
@@ -13,28 +13,27 @@
 
 {% include 'Navbar.html' %}
 
+{% include 'loader.html' %}
+
+
 <div class="ParentDiv">
-    <div>
-        <h1>Lista de Productos</h1>
-            <table border="1">
-                <tr>
-                    <th>Id_producto</th>
-                    <th>Id_tipo_producto</th>
-                    <th>Cantidad_Stock</th>
-                    <th>Nombre</th>
-                    <th>Precio</th>
-                </tr>
-                {% for producto in productos %}
-                <tr>
-                    <td>{{ producto.id_producto }}</td>
-                    <td>{{ producto.id_tipo_producto}}</td>
-                    <td>{{ producto.cantidad_stock}}</td>
-                    <td>{{ producto.nombre}}</td>
-                    <td>{{ producto.precio}}</td>
-                </tr>
-                {% endfor %}
-            </table>
+    <h1>Lista de Productos</h1>
+    <div class="card-container">
+        {% for producto in productos %}
+        <div class="card">
+            <div class="card-content">
+                <h2>{{ producto.nombre }}</h2>
+                <p>Tipo Producto: {{ producto.id_tipo_producto.descripcion }}</p>
+                <p>Cantidad en Stock: {{ producto.cantidad_stock }}</p>
+                <p>Precio: {{ producto.precio|floatformat:"0" }}</p>
+            </div>
+        </div>
+        {% endfor %}
     </div>
 </div>
+
+
+{% include 'footer.html' %}
+
 </body>
 </html>
