--- a/Core/Core/templates/SobreNosotros.html
+++ b/Core/Core/templates/SobreNosotros.html
@@ -14,29 +14,33 @@
 {% include 'Navbar.html' %}
 {% include 'loader.html' %}
 
-<section class="services">
-    <div class="service-card">
-        <img src="{% static 'resources/img/sobrenosotros_mec.png' %}" >
-        <h3>SOBRE NOSOTROS</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+<section class="story section">
+    <div class="story-content">
+        <div class="text-content">
+            <h2>Visión</h2>
+            <p>CarCareTech Maecenas hendrerit metus a augue tincidunt dignissim. Duis sit amet felis augue. Nam pulvinar vehicula nibh in suscipit. Ut tortor sapien, mattis vehicula laoreet ultricies, vulputate non leo. Vivamus volutpat viverra lacus non congue. Mauris id purus eros. Sed dignissim tellus arcu, at eleifend magna rutrum elementum. Aenean diam risus, mollis a tortor at, imperdiet pretium felis. Cras a rutrum neque, ut iaculis nulla. In turpis turpis, rutrum ac ornare ut, rutrum efficitur ante. Vestibulum porta cursus orci vel imperdiet. Ut consequat sapien eget nulla commodo, ac bibendum nisi iaculis. Pellentesque sed imperdiet sem. Nullam ut interdum nisi, vitae viverra metus.</p>
+        </div>
+        <img src="{% static 'resources/img/mecanismo.png' %}" alt="Founding Story Image">
     </div>
 </section>
 
-<section class="services">
-    <div class="service-card">
-        <img src="{% static 'resources/img/mecanico.png' %}" alt="Service 1">
-        <h3>Auto Diagnosis</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+<section class="about section">
+    <div class="about-content">
+        <img src="{% static 'resources/img/mecanico2.png' %}" alt="About Image">
+        <div class="text-content">
+            <h2>Misión</h2>
+            <p>Mauris a congue arcu, vehicula ornare leo. Sed in commodo felis. Mauris ante ex, aliquet et bibendum accumsan, tincidunt a risus. Cras non nisi hendrerit, commodo quam vel, porttitor augue. Suspendisse tempus consectetur fringilla. Donec et magna in purus lobortis dapibus in vel felis. Curabitur tincidunt, nulla eu rutrum fermentum, nulla metus tincidunt nisl, eget blandit lectus dolor quis diam. Cras viverra maximus augue, quis hendrerit odio semper et. Donec vestibulum nunc et tortor imperdiet, at porttitor lorem hendrerit. Vivamus congue nulla non mi porta, vitae placerat nisl pharetra. Vestibulum sit amet ex eu orci fringilla venenatis. In a malesuada mi. Cras consectetur est ut laoreet egestas..</p>
+        </div>
     </div>
-    <div class="service-card">
-        <img src="{% static 'resources/img/mecanismo.png' %}" alt="Service 2">
-        <h3>Auto Diagnosis</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
-    <div class="service-card">
-        <img src="{% static 'resources/img/mecanico2.png' %}" alt="Service 3">
-        <h3>Auto Diagnosis</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+</section>
+
+<section class="story section">
+    <div class="story-content">
+        <div class="text-content">
+            <h2>Historia de la Fundación</h2>
+            <p>CarCareTech Maecenas hendrerit metus a augue tincidunt dignissim. Duis sit amet felis augue. Nam pulvinar vehicula nibh in suscipit. Ut tortor sapien, mattis vehicula laoreet ultricies, vulputate non leo. Vivamus volutpat viverra lacus non congue. Mauris id purus eros. Sed dignissim tellus arcu, at eleifend magna rutrum elementum. Aenean diam risus, mollis a tortor at, imperdiet pretium felis. Cras a rutrum neque, ut iaculis nulla. In turpis turpis, rutrum ac ornare ut, rutrum efficitur ante. Vestibulum porta cursus orci vel imperdiet. Ut consequat sapien eget nulla commodo, ac bibendum nisi iaculis. Pellentesque sed imperdiet sem. Nullam ut interdum nisi, vitae viverra metus.</p>
+        </div>
+        <img src="{% static 'resources/img/mecanico.png' %}" alt="Founding Story Image">
     </div>
 </section>
 
