--- a/Core/Core/templates/ADMIN/sidebar.html
+++ b/Core/Core/templates/ADMIN/sidebar.html
@@ -19,10 +19,10 @@
             
         </li>
         <li class="has-subnav">
-            <a href="#">
+            <a href="{% url 'ad_clientes' %}">
                <i class="fa fa-comments fa-2x"></i>
                 <span class="nav-text">
-                    Group Hub Forums
+                    Clientes
                 </span>
             </a>
             
