--- a/Core/Core/static/resources/css/admin.css
+++ b/Core/Core/static/resources/css/admin.css
@@ -229,7 +229,7 @@ nav.main-menu li.active > a,
 
 .boton-cancelar:hover {
     background-color: #0011ff;
-    color: #0011ff;
+    color: #ffffff;
     text-decoration: none;
 }
 
