--- a/Core/Core/static/resources/css/admin.css
+++ b/Core/Core/static/resources/css/admin.css
@@ -256,20 +256,6 @@ nav.main-menu li.active > a,
     background-color: #c82333;
 }
 
-.btn-cancel {
-    background-color: #6c757d;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-.btn-cancel:hover {
-    background-color: #5a6268;
-    text-decoration: none;
-}
   /*---------------------------------------------*/
 
 /*TABLA USUARIOS*/
@@ -477,6 +463,30 @@ nav.main-menu li.active > a,
     border-color: #007bff;
     outline: none;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+ /*---------------------------------------------*/
+
+ /*TABLA PRODUCTOS*/
+
+ .product-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+
+.product-table th, .product-table td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+.product-table th {
+    background-color: #f2f2f2;
+}
+
+.product-table tr:hover {
+    background-color: #f5f5f5;
 }
 
  /*---------------------------------------------*/
