--- a/Core/Core/templates/ADMIN/clientes.html
+++ b/Core/Core/templates/ADMIN/clientes.html
@@ -18,6 +18,7 @@
 <div class="content-wrapper">
     <div class="center-content">
         <h2>Lista de Clientes</h2>
+        <input type="text" id="searchInput" placeholder="Buscar cliente..." class="search-bar">
         <table class="user-table">
             <thead>
                 <tr>
@@ -31,7 +32,7 @@
                     <th>Acciones</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="clienteTableBody">
                 {% for cliente in clientes %}
                     <tr>
                         <td>{{ cliente.Nombre }}</td>
@@ -216,6 +217,17 @@
                     } else {
                         vehiculosRow.style.display = 'none';
                     }
+                });
+            });
+
+            document.getElementById('searchInput').addEventListener('input', function() {
+                const filter = this.value.toLowerCase();
+                const rows = document.querySelectorAll('#clienteTableBody tr');
+        
+                rows.forEach(row => {
+                    const cells = row.querySelectorAll('td');
+                    const match = Array.from(cells).some(cell => cell.textContent.toLowerCase().includes(filter));
+                    row.style.display = match ? '' : 'none';
                 });
             });
             
