--- a/Core/Core/templates/ADMIN/sidebar.html
+++ b/Core/Core/templates/ADMIN/sidebar.html
@@ -28,7 +28,7 @@
             
         </li>
         <li class="has-subnav">
-            <a href="#">
+            <a href="{% url 'ad_productos' %}">
                <i class="fa fa-shopping-bag fa-2x"></i>
                 <span class="nav-text">
                     Productos
