--- a/Core/Core/templates/ADMIN/sidebar.html
+++ b/Core/Core/templates/ADMIN/sidebar.html
@@ -19,12 +19,13 @@
             
         </li>
         <li class="has-subnav">
-            <a href="#">
+            <a href="{% url 'ad_vehiculosa' %}">
                <i class="fa fa-car fa-2x"></i>
                 <span class="nav-text">
                     Vehiculos
                 </span>
             </a>
+            
             
         </li>
         <li class="has-subnav">
