--- a/Core/Core/templates/ADMIN/sidebar.html
+++ b/Core/Core/templates/ADMIN/sidebar.html
@@ -37,7 +37,7 @@
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="{% url 'ad_servicios' %}">
                 <i class="fa fa-wrench fa-2x"></i>
                 <span class="nav-text">
                     Servicios
