--- a/Core/Core/templates/ADMIN/sidebar.html
+++ b/Core/Core/templates/ADMIN/sidebar.html
@@ -52,7 +52,7 @@
             </a>
         </li>
         <li>
-            <a href="#">
+            <a href="{% url 'ad_factura'%}">
                 <i class="fa fa-credit-card fa-2x"></i>
                 <span class="nav-text">
                    Factura
